# roma-stt

./: .editorconfig  .gitattributes  .gitignore  .ruff.toml  README.md  main.py  pyproject.toml  roma-stt.bat  roma-stt.ps1  ИНСТРУКЦИЯ.md
.github/workflows/: ci.yml
application/: __init__.py  record_and_paste.py
application/control/: __init__.py  audio_facade.py  config_edits.py  gpu_detect.py  header_state.py  hotkey_facade.py  install_actions.py  menu_state.py  models_facade.py  process_scan.py  readiness.py  service.py
docs/: control_ui_architecture.md
domain/: __init__.py  config_validation.py  interfaces.py
infrastructure/: __init__.py  clipboard_paste.py  config_repo.py  recorder.py  text_postprocess.py  ui_chimes.py  whisper_cpp_engine.py
presentation/: __init__.py  hotkey.py  tray_app.py
presentation/control_gui/: __init__.py  __main__.py  hotkey_sort.py  main.py  main_window.py
scripts/: build_whisper_cpp.py  check_build.py  check_ready.py  download_model.py  download_vad_model.py  find_roma_stt_pids.py  install.py  install_tools.bat  install_tools.py  list_audio_devices.py  models.py  print_menu_state.py  scan_hotkeys.py  test_model.py  whisper_models.py
tests/: conftest.py
tests/unit/: test_main.py  test_shared_fixtures.py
tests/unit/application/: test_gpu_detect.py  test_record_and_paste.py
tests/unit/domain/: test_config_validation.py  test_interfaces.py
tests/unit/infrastructure/: test_clipboard_paste.py  test_config_repo.py  test_recorder.py  test_text_postprocess.py  test_ui_chimes.py  test_whisper_cpp_engine.py
(+10 files in other folders)
